Specifikáció: nem-grafikus részek.

--- a/dolgozat/fejezetek/2_rust.tex
+++ b/dolgozat/fejezetek/2_rust.tex
@@ -52,6 +52,7 @@ Ha a kódban az absztrakció nem költségnélküli, akkor a programozó hajlamo
 Ebben az esetben mindkettő nyelv lehetőséget ad költségnélküli absztrakcióra, ahol lehetséges.\cite{compare:cpp:zerocost, compare:rust:zerocost}
 
 \SubSection{Mozgatás szemantikák}
+\label{subsec:ownership_mentioned}
 
 Mozgatás konstruktorok használata során felmerülhet az a probléma, hogy az az objektum, amiből az erőforrások ki lettek mozgatva,
 helytelen, vagy kiszámíthatatlan maradhat a mozgatás után, ezáltal "használat mozgatás után" (use-after-move) hibákat okozhat.
