--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -325,3 +325,11 @@ howpublished = "{\url{https://blog.rust-lang.org/2016/05/05/cargo-pillars.html}}
 year = "{2016}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{gtk_tutorial,
+author = "Michael Murphy",
+title = "{Simple Common Mark Editor -- GTK Rust Tutorials}",
+howpublished = "{\url{https://mmstick.github.io/gtkrs-tutorials/chapter_04/index.html}}",
+year = "{2017}",
+note = "{Online, elérve: 2019}"
+}
