--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -333,3 +333,11 @@ howpublished = "{\url{https://mmstick.github.io/gtkrs-tutorials/chapter_04/index
 year = "{2017}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{glib:no_need_for_borrows,
+author = "{\texttt{gtk-rs} fejlesztők}",
+title = "{Objects -- \texttt{glib} -- Rust}",
+howpublished = "{\url{http://gtk-rs.org/docs/glib/#objects}}",
+year = "{2015}",
+note = "{Online, elérve: 2019}"
+}
