Külső követelmények az IDE részhez.

--- a/dolgozat/fejezetek/1_bevezetes.tex
+++ b/dolgozat/fejezetek/1_bevezetes.tex
@@ -17,7 +17,7 @@ vagy nem feltétlenül érhetné el egyáltalán (intelligens kódkiegészítés
 A szövegszerkesztőknél meg kell említenünk, hogy ma már a legtöbbjük intelligens eléggé ahhoz, 
 hogy egy IDE funkcióit maguk is szolgáltatni tudják. Ilyen szövegszerkesztőket, 
 és hogy hogyan támogatják a szoftverfejlesztést Rust-ban, a következő részben, 
-az \ref{sec:ides} alfejezetben fogjuk megtekinteni, illetve a dolgozat elmagyarázza, hogy ezek a megoldások miért nem elégségesek.
+\myaref{sec:ides} alfejezetben fogjuk megtekinteni, illetve a dolgozat elmagyarázza, hogy ezek a megoldások miért nem elégségesek.
 
 \Section{IDE-k Rust-ban}
 \label{sec:ides}
@@ -58,7 +58,7 @@ Az előző elemzésekből kitűnhet, hogy nyelvi szinten a Rust készen áll má
 Így a feladat a következő: létrehozni egy olyan IDE-t, ami a Rust nyelvet elsőrendű nyelvként kezeli, és annak előnyeire játszik. 
 Fontos, hogy az IDE kényelmessé tegye a nyelvben való programozást, így a fejlesztés során gyakori kell, hogy legyen az iterálás a felhasználó munkamenetén. 
 Fejleszteni kell majd olyan szolgáltatásokat, amik könynyebbé teszik a nyelv sajátosságainak megértését, például az utalások élettartamának nyomonkövetését 
-(ezeket a sajátosságokat majd bővebben bemutatjuk a \ref{sec:rust} fejezetben), és amik figyelmeztetnek a gyakori Rust programozási hibákra.
+(ezeket a sajátosságokat majd bővebben bemutatjuk \myaref{sec:rust} fejezetben), és amik figyelmeztetnek a gyakori Rust programozási hibákra.
 
 % TODO: Itt egy olyan leírásnak kellene majd szerepelnie, ami felhívja az olvasó figyelmét, hogy
 % - milyen fontos, hogy legyen ilyen IDE,
