--- a/dolgozat/hasznalat/hasznalat.tex
+++ b/dolgozat/hasznalat/hasznalat.tex
@@ -4,6 +4,10 @@
 
 %Ebben a fejezetben kell megadnunk, hogy a szakdolgozathoz mellékelt adathordozót (pl. CD) hogyan lehet elérni, milyen strukturát követ. Minimum 1 maximum 4 oldal a terjedelem. Lehet benne több alszakasz is. A fejezet címe nem módosítható, hasonlóan a következõ részhez (Irodalomjegyzék).
 
+% Dependenciák:
+% - Rust: https://www.rust-lang.org/learn/get-started
+% - libgtk3-dev, libgtksourceview3-dev, libpango1.0-dev
+
 \noindent A szakdolgozatomhoz mellékelt adathordozó eszközön található adatok struktúrája:
 
 $$
