--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -341,3 +341,11 @@ howpublished = "{\url{http://gtk-rs.org/docs/glib/#objects}}",
 year = "{2015}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{json-rpc,
+author = "{JSON-RPC.ORG}",
+title = "{JSON-RPC}",
+howpublished = "{\url{https://www.jsonrpc.org/}}",
+year = "{2005}",
+note = "{Online, elérve: 2019}"
+}
