--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt,a4paper]{report}
 
 \usepackage{dolgozat}
+\usepackage{listings}
+\usepackage{listings-rust}
 \usepackage{svg}
 \usepackage[hyphens]{url}
 
@@ -16,6 +18,8 @@
 \newpage
 
 \pagestyle{fancy}
+
+\lstset{language=Rust, style=boxed}
 
 %\include{fejezetek/bevezetes}
 
