--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -14,6 +14,14 @@ year = "{2015}",
 note = "{Online, elérve: 2019}"
 }
 
+@Misc{lsp-spec,
+author = "Microsoft",
+title = "{Language Server Protocol Specification}",
+howpublished = "{\url{https://microsoft.github.io/language-server-protocol/specification}}",
+year = "{2015}",
+note = "{Online, elérve: 2019}"
+}
+
 @Misc{ride,
 author = "Gustav Jansson",
 title = "{Ride}",
