--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -357,3 +357,11 @@ howpublished = "{\url{https://www.jsonrpc.org/}}",
 year = "{2005}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{rust:editions,
+author = "{Rust fejlesztők}",
+title = "{What are editions? -- the Edition Guide}",
+howpublished = "{\url{https://doc.rust-lang.org/nightly/edition-guide/editions/index.html}}",
+year = "{2018}",
+note = "{Online, elérve: 2019}"
+}
